--- a/commercial/app/views/hosted/singaporeF1Offtrack.scala.html
+++ b/commercial/app/views/hosted/singaporeF1Offtrack.scala.html
@@ -5,7 +5,7 @@
 @import com.gu.contentapi.client.model.v1.AssetType
 @import layout.ContentWidths.ImageContentMedia
 @import com.gu.contentapi.client.model.v1.AssetFields
-@(page: HostedPage)(implicit request: RequestHeader)
+@()(implicit request: RequestHeader)
 
 
 <p>
