--- a/commercial/app/views/hosted/singaporeF1Packages.scala.html
+++ b/commercial/app/views/hosted/singaporeF1Packages.scala.html
@@ -2,7 +2,7 @@
 @import common.commercial.hosted.HostedPage
 @import layout.ContentWidths.ImageContentMedia
 @import model.{ImageAsset, ImageMedia}
-@(page: HostedPage)(implicit request: RequestHeader)
+@()(implicit request: RequestHeader)
 
 
 <p>
