--- a/commercial/app/views/hosted/hostedVideoOnward.scala.html
+++ b/commercial/app/views/hosted/hostedVideoOnward.scala.html
@@ -8,7 +8,7 @@
             <h2 class="hosted__text hosted__next-page--more-from">More from</h2>
             <h2 class="hosted__next-page--client-name hosted-tone">@{trail.campaign.owner}</h2>
         </div>
-        <a href="@{trail.pageUrl}" class="hosted__next-page--tile" data-colour="@{trail.campaign.fontColour.brandColour}" data-link-name="Next Hosted Video: @{trail.title}">
+        <a href="@{trail.pageUrl}" class="hosted__next-page--tile" data-link-name="Next Hosted Video: @{trail.title}">
             <div class="hosted-next-page-bg hosted-tone-bg"></div>
             <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Video: @{trail.title}">
             <p class="hosted__next-video-title">@{trail.title}</p>
