--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -236,7 +236,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
     }
 }
 
-.hosted-article-page.zootropolis {
+.zootropolis {
     @mixin animal-stripe {
         position: absolute;
         z-index: 1;
