--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -58,7 +58,6 @@ $mobile-medium: 375px; // Breakpoint for our most common device sizes
     @include fs-textSans(5);
     line-height: $gs-baseline * 2.5;
     width: 100%;
-    margin-left: $gs-gutter / 2;
 
     @include mq($until: mobile) {
         font-size: 16px;
@@ -78,7 +77,7 @@ $mobile-medium: 375px; // Breakpoint for our most common device sizes
     @include mq(mobileLandscape) {
         font-size: 24px;
         line-height: $gs-baseline * 3.5;
-        margin-left: $gs-gutter;
+        margin-left: $gs-gutter/2;
     }
 }
 
@@ -180,13 +179,13 @@ $mobile-medium: 375px; // Breakpoint for our most common device sizes
     }
 }
 
-
 .new-header__nav__link {
     // Override a from _lists.scss
     color: #ffffff;
+    position: relative;
     padding-left: .3em;
-    padding-right: .07em;
-    display: inline-block;
+    padding-right: .3em;
+    float: left;
     cursor: pointer;
 
     &:focus,
@@ -194,16 +193,13 @@ $mobile-medium: 375px; // Breakpoint for our most common device sizes
         text-decoration: none;
     }
 
-    list-style: none;
-    white-space: nowrap;
-    position: relative;
-
     &:first-child {
-        padding-left: 0;
+        padding-left: $gs-gutter/2;
     }
 
     &:before {
         position: absolute;
+        pointer-events: none;
         content: '/';
         //optically aligns slashes
         left: -.19em;
@@ -213,6 +209,10 @@ $mobile-medium: 375px; // Breakpoint for our most common device sizes
     &:first-of-type:before {
         content: none;
     }
+}
+
+[data-link-name='nav2 : primary : life'] {
+    padding-right: .8em;
 }
 
 /*****************
