the text shouldn't flow under the image in the hosted onward journey tile

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -209,12 +209,10 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
         height: 10px;
         margin-bottom: 4px;
     }
-    .hosted__next-page-title {
+    .hosted-article__next-page-title {
         font-size: 16px;
         line-height: 18px;
         padding: 6px;
-        margin: 0;
-
         @include mq($until: phablet) {
             font-size: 14px;
             line-height: 16px;
