--- a/commercial/app/views/hosted/hostedArticleOnward.scala.html
+++ b/commercial/app/views/hosted/hostedArticleOnward.scala.html
@@ -13,7 +13,7 @@
         @for(trail <- trails) {
             <a href="@{trail.pageUrl}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                 <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
-                <p class="hosted__next-page-title">@{trail.title}</p>
+                <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
             </a>
         }
     </div>
