--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -212,6 +212,7 @@ $mobile-medium: 375px; // Breakpoint for our most common device sizes
 }
 
 [data-link-name='nav2 : primary : life'] {
+    padding-left: .35em;
     padding-right: .8em;
 }
 
@@ -710,6 +711,8 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     flex-direction: row;
     flex-flow: row wrap;
     justify-content: space-between;
+    margin-top: -$gs-baseline;
+    margin-bottom: -$gs-baseline/2;
     margin-left: $gs-gutter / 2;
     margin-right: $gs-gutter / 2;
 
@@ -721,10 +724,7 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
 
 .tertiary-navigation__item {
     width: calc(50% - #{$gs-gutter / 2});
-    min-height: $gs-row-height;
     border-top: 1px solid $neutral-5;
-    padding-top: 2px;
-    padding-bottom: $gs-baseline / 2;
 }
 
 .tertiary-navigation__text {
@@ -737,6 +737,10 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     line-height: 18px;
     font-weight: 600;
     color: $news-main-1;
+    min-height: $gs-row-height;
+    padding-top: $gs-baseline / 3;
+    padding-bottom: $gs-baseline / 2;
+    display: block;
 }
 
 .tertiary-navigation__icon {
