--- a/commercial/app/views/hosted/hostedGalleryOnward.scala.html
+++ b/commercial/app/views/hosted/hostedGalleryOnward.scala.html
@@ -5,7 +5,7 @@
     <p></p>
 } else {
     @for(trail <- trails) {
-        <a href="@{trail.pageUrl}" class="hosted-gallery__oj-next-gallery hosted-tone-border">
+        <a href="@{trail.url}" class="hosted-gallery__oj-next-gallery hosted-tone-border">
             <div class="hosted-gallery__next-gallery-title">
                 <div class="hosted-gallery__oj-sub-header hosted-tone">
                         More
