--- a/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
+++ b/commercial/app/views/hosted/guardianHostedGalleryOj.scala.html
@@ -10,7 +10,7 @@
             </a>
         </div>
         @for(nextPage <- nextPages){
-            <a href="@{nextPage.pageUrl}" class="hosted-gallery__oj-next-gallery hosted-tone-border">
+            <a href="@{nextPage.url}" class="hosted-gallery__oj-next-gallery hosted-tone-border">
                 <div class="hosted-gallery__next-gallery-title">
                     <div class="hosted-gallery__oj-sub-header hosted-tone">
                         More
