--- a/common/app/views/fragments/immersiveMainMedia.scala.html
+++ b/common/app/views/fragments/immersiveMainMedia.scala.html
@@ -75,7 +75,7 @@
             <div class="gs-container">
                 @if(!isTheMinuteArticle) {
                     <div class="content__main-column">
-                    @fragments.meta.metaInline(page.item)
+                    @fragments.meta.metaInline(page.item, page = page)
                 }
 
                 <h1 class="@RenderClasses(Map(
