--- a/common/app/views/fragments/meta/metaInline.scala.html
+++ b/common/app/views/fragments/meta/metaInline.scala.html
@@ -1,6 +1,6 @@
-@(item: model.ContentType, isAmp: Boolean = false)(implicit request: RequestHeader)
+@(item: model.ContentType, isAmp: Boolean = false, page: model.Page)(implicit request: RequestHeader)
 
-@import common.{LinkTo, Localisation}
+@import common.{LinkTo, Localisation, NewNavigation, Edition}
 @import conf.switches.Switches.ArticleBadgesSwitch
 @import model.Badges.badgeFor
 @import views.support.RenderClasses
@@ -24,21 +24,83 @@
         }
     }
 
-    @if(!(item.content.isImmersive && item.content.tags.isArticle)) {
-        <div class="content__section-label @if(item.content.tags.isGallery) { content__section-label--gallery }">
-            <a class="content__section-label__link" data-link-name="article section" href="@LinkTo {/@item.content.sectionLabelLink}">@Html(Localisation(item.content.sectionLabelName))</a>
+    @if(mvt.ABNewHeaderVariant.isParticipating) {
+        <div class="mobile-only">
+            @defining(Edition(request).navigation) { navigation =>
+
+                @NewNavigation.getSubSectionOrSectionLink(navigation, page).map { sectionLink =>
+                    @if(!(item.content.isImmersive && item.content.tags.isArticle)) {
+
+                        <div class="content__section-label @if(item.content.tags.isGallery) { content__section-label--gallery }">
+                            <a class="content__section-label__link"
+                                data-link-name="article section"
+                                href="@LinkTo {/@sectionLink.href}">
+                                    @sectionLink.title
+                            </a>
+                        </div>
+                    }
+
+                    @if(item.content.blogOrSeriesTag.isDefined) {
+                        @if(item.content.blogOrSeriesTag.get.name.toLowerCase() == sectionLink.title.toLowerCase()) {
+                            @ObserverOrSectionLabel()
+                        }
+
+                        @if(!(item.content.blogOrSeriesTag.get.name.toLowerCase() == sectionLink.title.toLowerCase())) {
+                            @item.content.blogOrSeriesTag.map { series =>
+                                <div class="content__series-label @if(item.content.isImmersive && item.content.tags.isArticle) { content__series-label--immersive-article }">
+                                    <a class="content__series-label__link" href="@LinkTo {/@series.id}">@series.name</a>
+                                </div>
+                            }.getOrElse {
+                                @ObserverOrSectionLabel()
+                            }
+                        }
+                    } else {
+                        @ObserverOrSectionLabel()
+                    }
+                }
+            }
         </div>
     }
 
-    @item.content.blogOrSeriesTag.map { series =>
+    @* TODO: This should actually show, but just not on mobile. Above should only show on mobile*@
+    <div class="@if(mvt.ABNewHeaderVariant.isParticipating) {hide-on-mobile}">
+
+        @if(!(item.content.isImmersive && item.content.tags.isArticle)) {
+            <div class="content__section-label @if(item.content.tags.isGallery) { content__section-label--gallery }">
+                <a class="content__section-label__link"
+                    data-link-name="article section"
+                    href="@LinkTo {/@item.content.sectionLabelLink}">
+                        @Html(Localisation(item.content.sectionLabelName))
+                </a>
+            </div>
+        }
+
+        @item.content.blogOrSeriesTag.map { series =>
         <div class="content__series-label @if(item.content.isImmersive && item.content.tags.isArticle) { content__series-label--immersive-article }">
             <a class="content__series-label__link" href="@LinkTo {/@series.id}">@series.name</a>
         </div>
-    }.getOrElse {
-        @if(item.content.isFromTheObserver) {
-            <div class="content__series-label">
-                <a class="content__series-label__link" href="http://observer.theguardian.com">The Observer</a>
-            </div>
+        }.getOrElse {
+            @if(item.content.isFromTheObserver) {
+                <div class="content__series-label">
+                    <a class="content__series-label__link" href="http://observer.theguardian.com">The Observer</a>
+                </div>
+            }
         }
-    }
+    </div>
 </div>
+
+@ObserverOrSectionLabel() = {
+    @if(item.content.isFromTheObserver) {
+        <div class="content__series-label">
+            <a class="content__series-label__link" href="http://observer.theguardian.com">The Observer</a>
+        </div>
+    }
+
+    @if(!item.content.isFromTheObserver) {
+        <div class="content__series-label @if(item.content.isImmersive && item.content.tags.isArticle) { content__series-label--immersive-article }">
+            <a class="content__series-label__link" href="@LinkTo {/@item.content.sectionLabelLink}">
+                @Html(Localisation(item.content.sectionLabelName))
+            </a>
+        </div>
+    }
+}
