--- a/common/app/views/fragments/headTonal.scala.html
+++ b/common/app/views/fragments/headTonal.scala.html
@@ -17,7 +17,7 @@
             <div class="content__main-column u-cf">
 
                 @if(showMeta) {
-                    @fragments.meta.metaInline(item, amp)
+                    @fragments.meta.metaInline(item, amp, page = page)
                 }
 
                 <h1 class="content__headline js-score" itemprop="headline">
