Make WR more accessible; make the placeholder a label

--- a/applications/app/views/signup/weekendReading.scala.html
+++ b/applications/app/views/signup/weekendReading.scala.html
@@ -2,7 +2,7 @@
 
 @import model.Page
 
-@signupMain(signupPage) {
+@main(signupPage, projectName = Some("signup")) { } {
     <div class="illustration-container">
         @fragments.inlineSvg("weekend-reading", "illustration")
     </div>
