Refactor displayPrice to make it clearer in name and body.

--- a/commercial/app/views/liveevents/liveEvent.scala.html
+++ b/commercial/app/views/liveevents/liveEvent.scala.html
@@ -23,7 +23,7 @@
                     <div class="advert__meta advert__meta--scarcity">Last few tickets remaining</div>
                 }
                 <div class="advert__standfirst">
-                    <strong>@event.displayPrice</strong>
+                    <strong>@event.displayPriceRange</strong>
                 </div>
                 <span class="advert__more button button--small button--primary">
                     Book now @fragments.inlineSvg("arrow-right", "icon", List("i-right"))
