Change the package of controllers to commercial.controllers.

--- a/commercial/app/views/contentapi/items.scala.html
+++ b/commercial/app/views/contentapi/items.scala.html
@@ -1,6 +1,6 @@
+@import _root_.commercial.controllers.{PaidFor, SponsorType, Supported}
 @import common.commercial.CardContent
 @import common.LinkTo
-@import controllers.commercial.{PaidFor, SponsorType, Supported}
 @import fragments.commercial.paidForMeta
 @import views.html.commercial.cards.itemCard
 @import views.html.commercial.containerWrapper
