Avoid confusion with membership in comment activity

--- a/identity/app/views/publicProfilePage.scala.html
+++ b/identity/app/views/publicProfilePage.scala.html
@@ -17,7 +17,7 @@
                 @user.dates.accountCreatedDate.map { accountCreatedDate =>
                     <p class="user-profile__last-seen">
                         @fragments.inlineSvg("clock", "icon", List("inline-icon--light-grey"))
-                        Member since @accountCreatedDate.toString("d MMM yyyy")
+                        Registered on @accountCreatedDate.toString("d MMM yyyy")
                     </p>
                 }
             </div>
