--- a/common/app/views/fragments/commercial/logo.scala.html
+++ b/common/app/views/fragments/commercial/logo.scala.html
@@ -1,20 +1,40 @@
-@(branding: common.commercial.Branding)(implicit request: RequestHeader)
-@import common.commercial.PaidContent
+@(branding: common.commercial.Branding, onDarkBackground: Boolean = false)(implicit request: RequestHeader)
+@import common.commercial.{Logo, PaidContent}
+
+@standardLogo(logo: Logo) = {
+    <img src="@logo.url" alt="@branding.sponsorName" class="badge__logo">
+}
+
+@ampLogo(logo: Logo) = {
+    @logo.dimensions.map { dim =>
+        <amp-img src="@logo.url"
+                 width="@dim.width"
+                 height="@dim.height"
+                 alt="@branding.sponsorName"
+                 class="badge__logo"></amp-img>
+    }.getOrElse {
+        <p>@branding.sponsorName</p>
+    }
+}
 
 @branding.label
 <a class="badge__link" href="@branding.sponsorLink" data-link-name="logo link">
     @if(request.isAmp) {
-        @branding.sponsorLogo.dimensions.map { dim =>
-            <amp-img src="@branding.sponsorLogo.url"
-                     width="@dim.width"
-                     height="@dim.height"
-                     alt="@branding.sponsorName"
-                     class="badge__logo"></amp-img>
-    }.getOrElse {
-        <p>@branding.sponsorName</p>
-    }
-} else {
-    <img src="@branding.sponsorLogo.url" alt="@branding.sponsorName" class="badge__logo">
+        @if(onDarkBackground && branding.highContrastSponsorLogo.nonEmpty) {
+            @for(highContrastLogo <- branding.highContrastSponsorLogo) {
+                @ampLogo(highContrastLogo)
+            }
+        } else {
+            @ampLogo(branding.sponsorLogo)
+        }
+    } else {
+        @if(onDarkBackground && branding.highContrastSponsorLogo.nonEmpty) {
+            @for(highContrastLogo <- branding.highContrastSponsorLogo) {
+                @standardLogo(highContrastLogo)
+            }
+        } else {
+            @standardLogo(branding.sponsorLogo)
+        }
     }
 </a>
 @if(branding.sponsorshipType != PaidContent) {
