--- a/common/app/views/fragments/commercial/pageLogo.scala.html
+++ b/common/app/views/fragments/commercial/pageLogo.scala.html
@@ -1,5 +1,8 @@
-@(branding: common.commercial.Branding, isInteractive: Boolean)(implicit request: RequestHeader)
+@(branding: common.commercial.Branding,
+  isInteractive: Boolean,
+  onDarkBackground: Boolean = false
+)(implicit request: RequestHeader)
 
 <div class="badge badge--alt @if(isInteractive){badge--interactive}">
-    @logo(branding)
+    @logo(branding, onDarkBackground)
 </div>
