--- a/admin/app/views/troubleshooter.scala.html
+++ b/admin/app/views/troubleshooter.scala.html
@@ -10,7 +10,7 @@
                 <fieldset>
                     <legend>@lb.name</legend>
                     @if(lb.name == "Applications"){
-                        You can also use Applicaitons to test...
+                        You can also use Applications to test...
                         <ul>
                             <li>Galleries: /fashion/gallery/2014/jan/22/paris-ss14-couture-shows-in-pictures</li>
                             <li>Video: /sport/video/2014/jan/22/michelle-obama-miami-heat-lets-move-video</li>
