--- a/common/app/views/main.scala.html
+++ b/common/app/views/main.scala.html
@@ -57,7 +57,7 @@
                     @fragments.immersiveGalleryMainMedia(page)
                 </div>
             }
-            case page: model.ContentPage if (page.item.content.isExplore) => {
+            case page: model.ContentPage if (page.item.content.isExplore && !page.item.content.tags.isInteractive) => {
                 <div class="@RenderClasses(Map(
                     ("immersive-header-container", page.item.fields.main.nonEmpty),
                     ("immersive-header-container--explore-series", page.item.content.tags.isExploreSeries),
