Add tech feedback to all userhelp emails

--- a/identity/app/views/fragments/userhelpFooter.scala.html
+++ b/identity/app/views/fragments/userhelpFooter.scala.html
@@ -3,4 +3,4 @@
 @(userhelp: model.Userhelp = IdentityUserhelp)(implicit request: RequestHeader)
 
 <li class="nav__item"><a class="nav__link" href="@userhelp.faq" data-link-name="FAQ">@userhelp.name FAQ</a></li>
-<li class="nav__item"><a class="nav__link" href="mailto:@userhelp.email" data-link-name="Email Userhelp">Email @userhelp.name Help</a></li>
+<li class="nav__item"><a class="nav__link" href="mailto:@userhelp.email" data-link-name="Email @userhelp.name Userhelp">Email @userhelp.name Help</a></li>
