--- a/common/app/views/fragments/atoms/atom.scala.html
+++ b/common/app/views/fragments/atoms/atom.scala.html
@@ -6,6 +6,6 @@
     model match {
         case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, false, Nil)
         case media: MediaAtom => views.html.fragments.atoms.media(media)
-        case _ => println("IN CATCH ALL")
+        case _ =>
     }
 }
